--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --main-color: aqua;
-    --main-color-bg:  rgb(2, 19, 44);
+    --main-color-bg: rgb(2, 19, 44);
     --main-color-bg-dark: rgb(3, 22, 49);
     --main-shadow: #17737342;
 }
@@ -15,18 +15,29 @@ body {
     background-color: var(--main-color-bg);
 }
 
-main.container {
+.container {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin: 0 auto;
+    padding: 1rem;
     width: 100%;
     height: 100vh
+}
+
+.main-box {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
 }
 
 .heading {
     display: flex;
     justify-content: center;
+    width: 75%;
+    margin: 0 auto;
     color: rgb(230, 234, 238);
     background-color: var(--main-color-bg-dark);
     padding: 5px 25px;
@@ -40,7 +51,7 @@ main.container {
 .heading img {
     height: 30px;
     width: 30px;
-    margin: auto;
+    margin: auto 0;
     margin-right: 7px;
 }
 
@@ -67,7 +78,8 @@ main.container {
 .content h4 {
     text-align: center;
     color: aqua;
-    font-size: 20px;
+    font-size: 25px;
+    margin-left: 5px;
     margin-top: 25px;
 }
 
@@ -77,4 +89,50 @@ main.container {
     font-size: 75px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
+}
+
+@media (min-width: 350px) {
+    .container {
+        width: 100%;
+    }
+
+    .clock-box {
+        height: 140px;
+    }
+
+    .content h1 {
+        font-size: 75px;
+    }
+
+    .content h4 {
+        font-size: 15px;
+        margin-top: 20px;
+    }
+
+    .content span {
+        font-size: 60px;
+    }
+}
+
+@media (min-width: 576px) {
+    .container {
+        width: 525px;
+    }
+
+    .clock-box {
+        height: 180px;
+    }
+
+    .content h1 {
+        font-size: 100px;
+    }
+
+    .content h4 {
+        font-size: 20px;
+        margin-top: 30px;
+    }
+
+    .content span {
+        font-size: 75px;
+    }
 }
